--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,300i,500,500i,700');
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Serif:300,300i,600');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700,700i');
 
 /* CSS Reset */
 html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, em, strong, img, ul, li, section {
@@ -10,13 +9,9 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, em, strong, img, ul, li, se
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	color: black;
 }
 section {
 	display: block;
-}
-body {
-	line-height: 1em;
 }
 ol, ul {
 	list-style: none;
@@ -28,16 +23,30 @@ html {
 	text-rendering: optimizeLegibility;
 }
 body {
-	width: 760px;
-  padding: 60px 100px;
+	width: 600px;
+  padding: 50px 60px;
+	font-family: 'IBM Plex Sans', sans-serif;
+	font-size: 1.2em;
+  font-weight: 400;
+	line-height: 1.5em;
+	color: #333ddd;
 }
-section {
-  padding-bottom: 2em;
-}
-a, a:visited, a:active {
+a, a:focus, a:visited, a:active {
+	text-decoration: none;
+	cursor:pointer;
+	outline:none;
+	color: #333ddd;
+  box-shadow: 0 1px 0 0px #FF6F61;
 }
 a:hover {
-  color: pink;
+  color: #FF6F61;
+	transition: color .3s ease;
+}
+strong {
+	font-weight: 700;
+}
+em {
+	font-style: italic;
 }
 img {
 	max-width:100%;
@@ -45,11 +54,7 @@ img {
 
 /* Menu */
 .menu {
-	font-family: 'IBM Plex Mono', monospace;
-	font-size: 0.85em;
-  font-weight: 300;
-  line-height: 1.5em;
-	margin-bottom: 1em;
+	margin-bottom: 4em;
 }
 .menu li {
   float: left;
@@ -57,93 +62,46 @@ img {
 }
 .menu li a {
 	display: block;
+	box-shadow: none;
 }
 
 /* Presentation */
 .presentation strong {
-  font-weight: 600;
-	color: pink;
-}
-.presentation em {
-  font-style: italic;
+	color: #FF6F61;
 }
 .presentation p, h1 {
-	font-family: 'IBM Plex Serif', serif;
-  padding-bottom: 0.75em;
-	font-weight: 300;
-}
-.presentation p {
-  font-size: 1.5em;
-	line-height: 1.5em;
-}
-.presentation h1 {
-  font-size: 3em;
-	line-height: 1.25em;
+  margin-bottom: 1em;
 }
 
 /* Data */
 .data {
-  font-family: 'IBM Plex Mono', monospace;
-  font-size: 0.85em;
-  font-weight: 300;
-  line-height: 1.5em;
+	padding-bottom: 1em;
 }
 .data h2 {
-  font-size: 1em;
-  font-weight: 600;
-  padding: 0 0 0.5em 0;
-  text-transform: uppercase;
+  font-weight: 700;
+	padding-bottom: .5em;
+	color: #FF6F61;
 }
-.data strong {
-  font-weight: 500;
+.link-img, .link-img:focus {
+	box-shadow: none;
 }
-.data em {
-  font-style: italic;
-}
-.data ul.list {
-	list-style-type: circle;
-	padding-left: 3em;
-}
-.data ul.list li {
-	padding-left: 1em;
-}
-.button {
-	padding: 14px;
-	border: 1px solid black;
-	text-decoration: none;
-	text-transform: uppercase;
-	font-size: 18px;
+#images {
+	width: 760px;
 }
 #shopping {
 	margin: 20px auto;
-	text-align: center;
 }
 #the-end {
-	margin-top: 30px;
+	padding-top: 1em;
 }
 
 /* Responsive */
-@media (max-width: 1150px) {
-	body {
-		width: 80%;
-	  padding: 40px 50px;
-	}
-	.presentation p {
-	  font-size: 1.4em;
-	}
-	.presentation h1 {
-	  font-size: 2.5em;
-	}
-}
-@media (max-width: 800px) {
+@media (max-width: 840px) {
 	body {
 		width: 90%;
 	  padding: 20px;
 	}
-	.presentation p {
-	  font-size: 1.25em;
-	}
-	.presentation h1 {
-	  font-size: 1.75em;
+	#images {
+		width: 100%;
 	}
 }
