--- a/style.css
+++ b/style.css
@@ -29,17 +29,19 @@ body {
 	font-size: 1.2em;
   font-weight: 400;
 	line-height: 1.5em;
-	color: #333ddd;
+	color: #ffffff;
+	background-color: #1b1b1b;
+
 }
 a, a:focus, a:visited, a:active {
 	text-decoration: none;
 	cursor:pointer;
 	outline:none;
-	color: #333ddd;
-  box-shadow: 0 1px 0 0px #FF6F61;
+	color: #ffffff;
+  box-shadow: 0 1px 0 0px #49e6ae;
 }
 a:hover {
-  color: #FF6F61;
+  color: #49e6ae;
 	transition: color .3s ease;
 }
 strong {
@@ -67,7 +69,7 @@ img {
 
 /* Presentation */
 .presentation strong {
-	color: #FF6F61;
+	color: #49e6ae;
 }
 .presentation p, h1 {
   margin-bottom: 1em;
@@ -80,7 +82,7 @@ img {
 .data h2 {
   font-weight: 700;
 	padding-bottom: .5em;
-	color: #FF6F61;
+	color: #49e6ae;
 }
 .link-img, .link-img:focus {
 	box-shadow: none;
