--- a/style.css
+++ b/style.css
@@ -27,18 +27,18 @@ body {
 	margin: auto;
   padding: 50px 60px;
 	font-family: 'Epilogue', sans-serif;
-	font-size: 1.2em;
+	font-size: 1.1em;
   font-weight: 400;
-	line-height: 1.6em;
-	color: #e1dede;
-	background-color: #18181c;
+	line-height: 1.5em;
+	color: #000;
+	background-color: #fff;
 
 }
 a, a:focus, a:visited, a:active {
 	text-decoration: none;
 	cursor:pointer;
 	outline:none;
-	color: #e1dede;
+	color: #000;
   box-shadow: 0 1px 0 0px #4770fd;
 }
 a:hover {
