--- a/style.css
+++ b/style.css
@@ -78,11 +78,11 @@ img {
 }
 .content article {
 	font-size: 0.75em;
-	line-height: 1.5em;
+	line-height: 1.25em;
 	padding-bottom: 3em
 }
 .content article p {
-	margin-bottom: 0;
+	margin-bottom: 0.5em;
 }
 .content h1 {
 	padding-bottom: .5em;
@@ -156,8 +156,7 @@ img {
 	border-top: 1px solid #222;
 	padding-top: 1em;
 	margin-top: 3em;
-	background-color: #000;
-	height: 1em;
+	height: 2em;
 }
 
 /* Responsive */
@@ -168,17 +167,32 @@ img {
 	}
 	.content {
 		font-size: 1.8em;
-		line-height: 1.4em;
 	}
 }
 @media (max-width: 840px) {
 	.content {
 		font-size: 1.5em;
-		line-height: 1.4em;
+		min-height: calc(100vh - 9em);
 	}
 }
 @media (max-width: 700px) {
 	#portrait {
-		max-width:100%;
+		max-width: 100%;
+	}
+	.content {
+		min-height: calc(100vh - 10em);
+	}
+	.newlinefooter {
+		display: block;
+		width: 100%;
+	}
+	.footer {
+		height: 3.5em;
+	}
+}
+@media (max-width: 500px) {
+	.newlineheader {
+		display: block;
+		width: 100%;
 	}
 }
