--- a/style.css
+++ b/style.css
@@ -1,5 +1,34 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@font-face {
+   font-family: "AtHauss";
+	 font-style: normal;
+	 font-weight: 300;
+   src: url("assets/AtHauss-Retina.woff2") format("woff2"), url("assets/AtHauss-Retina.woff") format("woff");
+}
+@font-face {
+   font-family: "AtHauss";
+	 font-style: italic;
+	 font-weight: 300;
+   src: url("assets/AtHauss-RetinaItalic.woff2") format("woff2"), url("assets/AtHauss-RetinaItalic.woff") format("woff");
+}
+@font-face {
+   font-family: "AtHauss";
+	 font-style: normal;
+	 font-weight: 400;
+   src: url("assets/AtHauss-Regular.woff2") format("woff2"), url("assets/AtHauss-Regular.woff") format("woff");
+}
+@font-face {
+   font-family: "AtHauss";
+	 font-style: normal;
+	 font-weight: 600;
+   src: url("assets/AtHauss-Semibold.woff2") format("woff2"), url("assets/AtHauss-Semibold.woff") format("woff");
+}
+@font-face {
+   font-family: "AtHauss";
+	 font-style: italic;
+	 font-weight: 600;
+   src: url("assets/AtHauss-SemiboldItalic.woff2") format("woff2"), url("assets/AtHauss-SemiboldItalic.woff") format("woff");
+}
 
 /* CSS Reset */
 html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, em, strong, img, ul, li, section {
@@ -21,29 +50,34 @@ ol, ul {
 html {
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
 }
 body {
-	max-width: 700px;
+	max-width: 1100px;
 	margin: 90px auto;
-	font-family: 'Space Mono', monospace;
-  font-weight: 400;
+	font-family: "AtHauss", sans-serif;
+  font-weight: 300;
 	font-size: 18px;
+  font-feature-settings: "onum";
 	line-height: 26px;
-	color: #000;
-	background-color: #FFFFFF;
+	color: #fff;
+	background-color: #000;
 }
 a, a:focus, a:visited, a:active {
 	text-decoration: none;
 	outline:none;
-	color: #000;
-  box-shadow: 0 1px 0 0px #4770fd;
+	color: #fff;
+  box-shadow: 0 2px 0 0px #4770fd;
 }
 a:hover {
   color: #4770fd;
-	transition: color .4s ease;
+	transition: color .5s ease;
+}
+.pedro {
+  box-shadow: none;
 }
 strong {
-	font-weight: 700;
+	font-weight: 600;
 }
 em {
 	font-style: italic;
@@ -55,45 +89,52 @@ img {
   color: rgba(255,255,255,.996);
   background: rgba(71,112,253,.996);
 }
+.blue {
+  color: #4770fd;
+}
 
 /* header */
 .header {
-	margin-top: 1.5em;
+	margin-top: 1em;
 	top: 0;
 	position: fixed;
+  font-weight: 400;
 }
 .header ul li {
   float: left;
 	padding-right: 1.5em;
 }
-.header ul li a {
-	display: block;
-	box-shadow: none;
-}
 
 /* content */
 .content h1 {
 	padding-bottom: 1em;
-	font-weight: 700;
-	color: #4770fd;
+	font-weight: 300;
+  font-size: 48px;
+  line-height: 56px;
 }
 .content h2 {
+  padding-top: 2em;
 	padding-bottom: 1em;
-	padding-top: 1em;
-	font-weight: 700;
+	font-weight: 600;
 	color: #4770fd;
+  font-size: 32px;
+  line-height: 42px;
 }
 .content p {
   margin-bottom: 1em;
 }
+.content {
+  padding-top: 0;
+  padding-bottom: 70px;
+}
 .content ul#fonts li {
 	padding-bottom: 15px;
-	border-bottom: solid 2px #D2D2D2;
 	margin-bottom: 15px;
 }
 .content ul#fonts li strong {
 	color: #4770fd;
 }
+
 
 /* footer */
 .footer {
@@ -101,15 +142,25 @@ img {
 	color: #B5B5BA;
 	bottom: 0;
 	position: fixed;
+  font-weight: 300;
+}
+.footer a, .footer a:focus, .footer a:visited, .footer a:active {
+	color: #B5B5BA;
+}
+.footer a:hover {
+  color: #4770fd;
+	transition: color .4s ease;
 }
 
 /* Responsive */
-@media (max-width: 700px) {
+@media (max-width: 1260px) {
 	body {
 		width: 90%;
 	}
-	.content h1#index {
-		font-size: 26px;
-		line-height: 34px;
-	}
+}
+@media (max-width: 960px) {
+  .content h1 {
+    font-size: 28px;
+    line-height: 34px;
+  }
 }
