--- a/style.css
+++ b/style.css
@@ -54,14 +54,14 @@ body {
 	font-size: 18px;
   font-feature-settings: "onum";
 	line-height: 26px;
-	color: #fff;
-	background-color: #000;
+	color: #F2F2F2;
+	background-color: #363636;
 }
 a, a:focus, a:visited, a:active {
 	text-decoration: none;
 	outline:none;
-	color: #fff;
-  box-shadow: 0 1px 0 0px #fff;
+	color: #F2F2F2;
+  box-shadow: 0 1px 0 0px #F2F2F2;
 }
 a:hover {
   color: #bbb;
@@ -107,7 +107,7 @@ img {
   padding-top: 2em;
 	padding-bottom: 1em;
 	font-weight: 600;
-	color: #fff;
+	color: #F2F2F2;
   font-size: 32px;
   line-height: 42px;
 }
@@ -120,7 +120,7 @@ img {
 }
 
 .content ul#fonts li strong {
-	color: #fff;
+	color: #F2F2F2;
 }
 .col1 {
 	width: 21%;
@@ -141,28 +141,26 @@ img {
 	filter: invert(32%) sepia(0%) saturate(1%) hue-rotate(356deg) brightness(98%) contrast(87%);
 }
 .col2c {
-	display: none;
+	display: block;
 	width: 75%;
+	margin-bottom: 200px;
 }
 .visible {
 	display: inline-block;
-}
-#logs {
-	min-height: 450px;
 }
 table {
 	border-collapse:collapse;
 	text-align: left;
 }
 table th {
-	background: #000000;
-	color: #ffffff;
+	background: #363636;
+	color: #F2F2F2;
 	font-weight: 600;
 }
 table td {
 	text-align:left;
-	background: #000000;
-	color: #ffffff;
+	background: #363636;
+	color: #F2F2F2;
 }
 table #th1 {
 	width: 130px;
@@ -179,9 +177,6 @@ table #th4 {
 table #th5 {
 	width: 80px;
 }
-#intro {
-	padding-bottom: 12em;
-}
 
 /* footer */
 .footer {
@@ -195,9 +190,37 @@ table #th5 {
 	color: #B5B5BA;
 }
 .footer a:hover {
-  color: #fff;
+  color: #F2F2F2;
 	transition: color .4s ease;
 }
+.footer {
+	width: 100%;
+}
+.footer ul li#link-logs {
+	color: #494949;
+}
+.footer ul li#link-logs a,
+.footer ul li#link-logs a:focus,
+.footer ul li#link-logs a:visited,
+.footer ul li#link-logs a:active {
+	color: #494949;
+	text-decoration: none;
+	outline:none;
+	box-shadow: none;
+}
+.footer ul li#link-logs a:hover {
+	color: #616161;
+	transition: color .5s ease;
+}
+#menu-logs {
+	padding-bottom: 100px;
+}
+
+.anchor {
+	padding-top: 100px;
+	margin-top: -100px;
+}
+
 
 /* Responsive */
 @media (max-width: 1260px) {
