--- a/style.css
+++ b/style.css
@@ -203,22 +203,23 @@ table #th5 {
 .footer ul li#link-logs a:focus,
 .footer ul li#link-logs a:visited,
 .footer ul li#link-logs a:active {
-	color: #494949;
+	color: #303030;
 	text-decoration: none;
 	outline:none;
 	box-shadow: none;
 }
 .footer ul li#link-logs a:hover {
-	color: #616161;
+	color: #505050;
 	transition: color .5s ease;
 }
 #menu-logs {
 	padding-bottom: 100px;
+	position: sticky;
+	top: 50px;
 }
-
 .anchor {
-	padding-top: 100px;
-	margin-top: -100px;
+	padding-top: 120px;
+	margin-top: -120px;
 }
 
 
