--- a/style.css
+++ b/style.css
@@ -56,23 +56,49 @@ body {
 	line-height: 26px;
 	color: #F2F2F2;
 	background-color: #222222;
-	cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="%23ffffff00" stroke="rgba(71,112,253,.996)" stroke-width="3" width="30" height="30" viewBox="0 0 30 30"><circle cx="15" cy="15" r="10"/></svg>') 15 15, auto;
+	cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="rgba(71,112,253,.996)" stroke="rgba(71,112,253,.996)" stroke-width="3" width="30" height="30" viewBox="0 0 30 30"><circle cx="15" cy="15" r="10"/></svg>') 15 15, auto;
 }
-
 a, a:focus, a:visited, a:active {
 	text-decoration: none;
 	outline: none;
 	color: #F2F2F2;
-	box-shadow: 0 1px 0 0px #F2F2F2;
-	cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="rgba(71,112,253,0.3)" stroke="rgba(71,112,253,0.996)" stroke-width="3" width="34" height="34" viewBox="0 0 34 34"><circle cx="17" cy="17" r="14"/></svg>') 17 17, auto;
-	transition: box-shadow 0.3s ease, filter 0.3s ease;
+	position: relative;
+	cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="rgba(71,112,253,0.996)" stroke-width="4" width="60" height="60" viewBox="0 0 40 40"><circle cx="20" cy="20" r="17"/></svg>') 30 30, auto;
+
+
+	transition: color 0.5s ease;
 }
-a:hover {
-  color: #bbb;
-	transition: color .5s ease;
+
+a::before { /* Línea blanca fija */
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: -1px;
+	width: 100%;
+	height: 1px;
+	background-color: #F2F2F2;
 }
-.pedro {
-  box-shadow: none;
+a::after { /* Línea azul*/
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: -6px;
+	width: 100%;
+	height: 6px;
+	background-color: rgba(71,112,253,0.996);
+	transform: scaleX(0);
+	transform-origin: center;
+	transition: transform 0.3s ease;
+}
+a:hover::after {
+	transform: scaleX(1);
+}
+a.desnudo::before { /* Enlaces desnudos */
+	background-color: transparent;
+}
+#intro h1 a { /* Enlace intro */
+  display: inline-block;
+  padding-bottom: 0px;
 }
 strong {
 	font-weight: 600;
@@ -213,7 +239,7 @@ table #th5 {
 	box-shadow: none;
 }
 .footer ul li#link-logs a:hover {
-	color: #505050;
+	color: #666;
 	transition: color .5s ease;
 }
 #menu-logs {
